[package]
name = "ids_harvester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = {version = "0.3.15", features = ["futures-io", "gzip"]}
reqwest = { version = "0.11.17", features = ["stream", "json"]}
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
aws-sdk-sqs = "0.28.0"
serde_json = "1.0.96"
futures = "0.3.28"